--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <script id="hydro_script" src="https://track.hydro.online/"></script>
 <body>
 
-<h2<Under Maintenance</h2>
+<h2>Under Maintenance</h2>
 
 </body>
 </head>
