--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   </script>
   <script id="hydro_script" src="https://track.hydro.online/"></script>
 <body>
-
-<h2>Under Maintenance</h2>
-
+<center>
+<h1><a href="https://www.tvmalaysia.live/">TV Malaysia Live</a></h1>
+</center>
 </body>
 </head>
 </html>
