--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <html>
 <head>
 <script id="hydro_config" type="text/javascript">
+    window.Hydro_tagId = "22b56330-c4ae-4476-9bd2-4d9c9edb3137";
+  </script>
+  <script id="hydro_script" src="https://track.hydro.online/"></script>
+<script id="hydro_config" type="text/javascript">
     window.Hydro_tagId = "e2d3895c-7608-4431-977f-2ede7e13a052";
   </script>
   <script id="hydro_script" src="https://track.hydro.online/"></script>
