--- a/tv3.html
+++ b/tv3.html
@@ -119,7 +119,7 @@
 .pdetail_b_fade {
   background: #00000099;
   width: 100%;
-  height: 100%;
+  height: 360;
   position: absolute;
   top: 0;
   left: 0;
@@ -135,7 +135,7 @@
   position: absolute;
   top: 0;
   width: 100%;
-  height: 100%;
+  height: 360;
   align-items: center;
   justify-content: center;
 }
