--- a/tv3.html
+++ b/tv3.html
@@ -1,1 +1,20 @@
-<div id="stream"><iframe src="//embedtvmalaysia.blogspot.com/2021/11/tV3.html" sandbox="allow-same-origin allow-scripts allow-forms" autoplay="true" scrolling="no" frameborder="0" loading="lazy" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; fullscreen; geolocation; web-share; speaker-selection; screen-wake-lock; idle-detection" allowfullscreen></iframe></div>
+<div i<script type="text/javascript" src="https://cdn.jsdelivr.net/clappr/latest/clappr.min.js"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/clappr.level-selector/latest/level-selector.min.js"></script>
+<div id="oper"></div>
+<div id="vid"></div>
+<script>
+ player = new Clappr.Player({
+ source: "https://tonton-live-ssai.akamaized.net/live/2dd2b7cd-1b34-4871-b669-57b5c9beca23/cmaf.isml/.m3u8",
+ mimeType: "application/x-mpegURL",
+ autoPlay: true, 
+ height: "360",
+ width: "100%",
+ preload: 'auto',
+ plugins: {"core": [LevelSelector]}, 
+ parentId: "#vid"});
+</script>
+<script id="hydro_config" type="text/javascript">
+    window.Hydro_tagId = "22b56330-c4ae-4476-9bd2-4d9c9edb3137";
+  </script>
+  <script id="hydro_script" src="https://track.hydro.online/"></script>
+<center><a href="https://www.tvmalaysia.live/">TV Malaysia Online</a></center>d="stream"><iframe src="//embedtvmalaysia.blogspot.com/2021/11/tV3.html" sandbox="allow-same-origin allow-scripts allow-forms" autoplay="true" scrolling="no" frameborder="0" loading="lazy" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; fullscreen; geolocation; web-share; speaker-selection; screen-wake-lock; idle-detection" allowfullscreen></iframe></div>
