--- a/tv3.html
+++ b/tv3.html
@@ -1,4 +1,4 @@
-<div i<script type="text/javascript" src="https://cdn.jsdelivr.net/clappr/latest/clappr.min.js"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/clappr/latest/clappr.min.js"></script>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/clappr.level-selector/latest/level-selector.min.js"></script>
 <div id="oper"></div>
 <div id="vid"></div>
